force-app/main/default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hebbal</fullName>
            </value>
            <value>
                <fullName>Karthik Nagar</fullName>
            </value>
            <value>
                <fullName>Marthalli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>