force-app/main/default/objects/Lead/fields/checkBox1__c.field-meta.xml
<CustomField>
    <fullName>checkBox1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkBox1</label>
    <type>Checkbox</type>
</CustomField>