force-app/main/default/objects/Lead/fields/checkBox2__c.field-meta.xml
<CustomField>
    <fullName>checkBox2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkBox2</label>
    <type>Checkbox</type>
</CustomField>