force-app/main/default/objects/Lead/fields/checkBox3__c.field-meta.xml
<CustomField>
    <fullName>checkBox3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkBox3</label>
    <type>Checkbox</type>
</CustomField>