force-app/main/default/objects/Lead/fields/LeadAssaignment__c.field-meta.xml
<CustomField>
    <fullName>LeadAssaignment__c</fullName>
    <formula>IF( ISPICKVAL( Area__c , &quot;Marthalli&quot; ), MOD( VALUE( LeadNunmber__c ) ,2) , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomLeadAssaignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>