force-app/main/default/objects/Lead/fields/LeadNunmber__c.field-meta.xml
<CustomField>
    <fullName>LeadNunmber__c</fullName>
    <label>LeadNunmber</label>
    <type>AutoNumber</type>
</CustomField>